--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://chikkychime:T5PumD77vJ2IL5p8@lilies.lg1r96k.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = 55522113697415
