--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1",
+    "swiper": "^11.0.5",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
