--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
+    "use-local-storage": "^3.0.0",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
