--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5",
     "use-local-storage": "^3.0.0",
+    "uuid": "^9.0.1",
     "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
